--- a/generic.html
+++ b/generic.html
@@ -49,7 +49,7 @@
 								<p>I've always been insterested in data analysis world. I enjoy creating projects to visualize the impressive dashboards from raw dataset since starting my journey as a data analyst. Moreover, everyday is the day for improving my skills of further problems and having fun with it! </p><br />
 								<h2>Technical skills</h2>
 								<h3 style="margin-bottom: 0.1rem; margin-top: 0.1rem;">Language</h3><p style="margin-bottom: 0.8rem;">Python, SQL</p>
-								<h3 style="margin-bottom: 0.1rem; margin-top: 0.1rem;">Software</h3><p>Jupyter Notebook, SQL Server, VS Code, Tableau, PowerBI, IBM DB2, IBM Cognos, Excel</p><br />
+								<h3 style="margin-bottom: 0.1rem; margin-top: 0.1rem;">Software</h3><p>Jupyter Notebook, SQL Server, VS Code, Tableau, PowerBI, IBM DB2 and IBM Cognos on cloud, Excel</p><br />
 								<h2>Education</h2>
 								<h3 style="margin-bottom: 0.1rem; margin-top: 0.1rem;">IBM Data Analyst Professional Certificate</h3><i style="margin-bottom: 0.1rem;">Nov 2022 - Feb 2023</i>
 								<p style="margin-bottom: 0.3rem;">• Learned to perform data collection, data wrangling and preparation, exploratory data analysis, statistical analysis and data mining, data visualization with different charts and plots, and interactive dashboard creation</p>
