--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 										<h2><a href="https://github.com/KantamaneeKantang/Portfolio-Project-2/tree/main/Real%20Estate%20Scrapping">Real Estate Web Scrapping in Bangkok with Python<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/KantamaneeKantang/Portfolio-Project-2/tree/main/Real%20Estate%20Scrapping" class="image fit"><img src="images/realestate.jpg" alt="" /></a>
+									<a href="https://github.com/KantamaneeKantang/Portfolio-Project-2/tree/main/Real%20Estate%20Scrapping" class="image fit"><img style="object-fit: cover;" src="images/realestate.jpg" alt="" width="100%" height="240px"/></a>
 									<p>This project is scrapped data, for example, price, type and number of bedroom from different pages of FazWas website specified selling property in Bangkok. Next, the data is cleaned in Excel before visualization with Tableau.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/KantamaneeKantang/Portfolio-Project-2/tree/main/Real%20Estate%20Scrapping" class="button">View More</a></li>
@@ -82,7 +82,7 @@
 										<h2><a href="https://github.com/KantamaneeKantang/Portfolio-Project-2/tree/main/World%20Happiness%202023">World Happiness Report 2023 with Python<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/KantamaneeKantang/Portfolio-Project-2/tree/main/World%20Happiness%202023" class="image fit"><img src="images/happiness.jpg" alt="" /></a>
+									<a href="https://github.com/KantamaneeKantang/Portfolio-Project-2/tree/main/World%20Happiness%202023" class="image fit"><img style="object-fit: cover;" src="images/happiness.jpg" alt="" width="100%" height="240px" /></a>
 									<p>The World Happiness Report 2013 Project is performed importing Data, Exploring Data, Data Wrangling, Correlation, Exploratory Data Analysis, Model Development, Model Evaluation and Saving the data into Excel file for Visualization in a dashboard in Tableau. The output data and visulization are about top happiness countiries, relationships of factors and prediction values of happiness score difined by related foctors.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/KantamaneeKantang/Portfolio-Project-2/tree/main/World%20Happiness%202023" class="button">View More</a></li>
@@ -94,7 +94,7 @@
 										<h2><a href="https://github.com/KantamaneeKantang/Portfolio-Project-2/tree/main/Energy%20Consumption">Energy Consumption with SQL<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/KantamaneeKantang/Portfolio-Project-2/tree/main/Energy%20Consumption" class="image fit"><img src="images/energy.jpg" alt="" /></a>
+									<a href="https://github.com/KantamaneeKantang/Portfolio-Project-2/tree/main/Energy%20Consumption" class="image fit"><img style="object-fit: cover;" src="images/energy.jpg" alt="" width="100%" height="240px"/></a>
 									<p>Energy Consumption project is combined used the dataset of world energy and accessing electricity. The data is accessed via SQL for answering questions and created a dashboard in Power BI.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/KantamaneeKantang/Portfolio-Project-2/tree/main/Energy%20Consumption" class="button">View More</a></li>
@@ -106,7 +106,7 @@
 										<h2><a href="https://github.com/KantamaneeKantang/PortfolioProjects/blob/main/Covid%20Portfolio%20Project.sql">Data Exploration in SQL<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/KantamaneeKantang/PortfolioProjects/blob/main/Covid%20Portfolio%20Project.sql" class="image fit"><img src="images/covid.jpg" alt="" /></a>
+									<a href="https://github.com/KantamaneeKantang/PortfolioProjects/blob/main/Covid%20Portfolio%20Project.sql" class="image fit"><img style="object-fit: cover;" src="images/covid.jpg" alt="" width="100%" height="240px"/></a>
 									<p>This is presented Data Exploration of the global data on confirmed COVID-19 deaths dataset in SQL Server from <a href="https://ourworldindata.org/covid-deaths">this website</a>.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/KantamaneeKantang/PortfolioProjects/blob/main/Covid%20Portfolio%20Project.sql" class="button">View More</a></li>
@@ -118,7 +118,7 @@
 										<h2><a href="https://public.tableau.com/app/profile/kantamanee.kantang">Tableau Projects<br />
 										</a></h2>
 									</header>
-									<a href="https://public.tableau.com/app/profile/kantamanee.kantang" class="image fit"><img src="images/Tableau.png" alt="" /></a>
+									<a href="https://public.tableau.com/app/profile/kantamanee.kantang" class="image fit"><img style="object-fit: cover;" src="images/Tableau.png" alt="" width="100%" height="240px"/></a>
 									<p>Dashboards for projects visualized by Tableau, For instance, the global data COVID-19 and AirBnB dashboards.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/kantamanee.kantang" class="button">View More</a></li>
@@ -130,7 +130,7 @@
 										<h2><a href="https://github.com/KantamaneeKantang/PortfolioProjects/blob/main/Nashville%20Housing-Cleaning.sql">Data Cleaning in SQL<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/KantamaneeKantang/PortfolioProjects/blob/main/Nashville%20Housing-Cleaning.sql" class="image fit"><img src="images/housing.jpg" alt="" /></a>
+									<a href="https://github.com/KantamaneeKantang/PortfolioProjects/blob/main/Nashville%20Housing-Cleaning.sql" class="image fit"><img style="object-fit: cover;" src="images/housing.jpg" alt="" width="100%" height="240px"/></a>
 									<p>This project is showed cleaning of Nashville Housing data in SQL Server which the data is prepared for furture analysis and visualization.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/KantamaneeKantang/PortfolioProjects/blob/main/Nashville%20Housing-Cleaning.sql" class="button">View More</a></li>
@@ -142,7 +142,7 @@
 										<h2><a href="https://github.com/KantamaneeKantang/PortfolioProjects/blob/main/Movie%20Correlation%20Project.ipynb">Data Correlation for Movie Industry with Python<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/KantamaneeKantang/PortfolioProjects/blob/main/Movie%20Correlation%20Project.ipynb" class="image fit"><img src="images/movie.jpg" alt="" /></a>
+									<a href="https://github.com/KantamaneeKantang/PortfolioProjects/blob/main/Movie%20Correlation%20Project.ipynb" class="image fit"><img style="object-fit: cover;" src="images/movie.jpg" alt="" width="100%" height="240px"/></a>
 									<p>This project is collected data from csv file, performing data cleaning and then finding the correlation, to find variables effect gross revenue.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/KantamaneeKantang/PortfolioProjects/blob/main/Movie%20Correlation%20Project.ipynb" class="button">View More</a></li>
@@ -154,7 +154,7 @@
 										<h2><a href="https://github.com/KantamaneeKantang/PortfolioProjects/blob/main/Amazon%20Shoes%20Web%20Scrapper%20Project.ipynb">Scrapping Automated Price for Shoes in Amazon with Python<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/KantamaneeKantang/PortfolioProjects/blob/main/Amazon%20Shoes%20Web%20Scrapper%20Project.ipynb" class="image fit"><img src="images/Amazon.png" alt="" /></a>
+									<a href="https://github.com/KantamaneeKantang/PortfolioProjects/blob/main/Amazon%20Shoes%20Web%20Scrapper%20Project.ipynb" class="image fit"><img style="object-fit: cover;" src="images/Amazon.png" alt="" width="100%" height="240px"/></a>
 									<p>Scrapping Data eg. Brand, Name, Color , Size and Date from Amazon Website to update the price for shoes everyday.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/KantamaneeKantang/PortfolioProjects/blob/main/Amazon%20Shoes%20Web%20Scrapper%20Project.ipynb" class="button">View More</a></li>
@@ -166,7 +166,7 @@
 										<h2><a href="https://github.com/KantamaneeKantang/PortfolioProjects/blob/main/Automating%20Crypto%20Website%20API.ipynb">Automating Crypto Website using API<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/KantamaneeKantang/PortfolioProjects/blob/main/Automating%20Crypto%20Website%20API.ipynb" class="image fit"><img src="images/crypto.jpg" alt="" /></a>
+									<a href="https://github.com/KantamaneeKantang/PortfolioProjects/blob/main/Automating%20Crypto%20Website%20API.ipynb" class="image fit"><img style="object-fit: cover;" src="images/crypto.jpg" alt="" width="100%" height="240px"/></a>
 									<p>Accessing cryptomarket.com using API and creating funtion to append new data every 60 sec in order to visualize the value changed over time.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/KantamaneeKantang/PortfolioProjects/blob/main/Automating%20Crypto%20Website%20API.ipynb" class="button">View More</a></li>
@@ -178,7 +178,7 @@
 										<h2><a href="https://github.com/KantamaneeKantang/IBM-Capstone-Project">Identifying skill requirements trends for this year's report<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/KantamaneeKantang/IBM-Capstone-Project" class="image fit"><img src="images/programming.jpg" alt="" /></a>
+									<a href="https://github.com/KantamaneeKantang/IBM-Capstone-Project" class="image fit"><img style="object-fit: cover;" src="images/programming.jpg" alt="" width="100%" height="240px"/></a>
 									<p>This project is to analyzes data with a work scenario of changing technologies to identify future skill requirements, contaning with collecting data, cleaning data, taking statistical to analyze and visualization in dashboard. In addition, this is included a presentation to conclude the results for stakeholders (IBM Data Analyst Capstone Project).</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/KantamaneeKantang/IBM-Capstone-Project" class="button">View More</a></li>
@@ -190,12 +190,13 @@
 										<h2><a href="https://github.com/KantamaneeKantang/PowerBI-Projects">Power BI Projects<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/KantamaneeKantang/PowerBI-Projects" class="image fit"><img src="images/powerbi.png" alt="" /></a>
+									<a href="https://github.com/KantamaneeKantang/PowerBI-Projects" class="image fit"><img style="object-fit: cover;" src="images/powerbi.png" alt="" width="100%" height="240px"/></a>
 									<p>Dashboards for projects visualized by PowerBI, For instance, Data Professional Servey Project.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/KantamaneeKantang/PowerBI-Projects" class="button">View More</a></li>
 									</ul>
 								</article>
+								
 								
 							</section>
 
