--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<div id="intro">
 						<h1>KANTAMANEE'S<br />
 						PORTFOLIO</h1>
-						<p>I'm Kantamanee Kantang, having Data Analyst skills in Python, SQL, Tableau, PowerBI, IBM DB2&IBM Cognos on cloud, and Excel contained in <a href="https://github.com/KantamaneeKantang">@KantamaneeKantang</a>
-						and you can see my LinkedIn profile <a href="https://www.linkedin.com/in/kantamanee-kantang-6a4833172/">here</a>.</p>
+						<p>I'm Kantamanee Kantang, having <b>Data Analyst skills</b> in Python, SQL, Tableau, PowerBI, IBM DB2&IBM Cognos on cloud, and Excel contained in <a href="https://github.com/KantamaneeKantang">@KantamaneeKantang</a>
+						which you can see my LinkedIn profile <a href="https://www.linkedin.com/in/kantamanee-kantang-6a4833172/">here</a> and also interest in <b>System Analyst skills</b> having some knowledge of Application Design, for example, Domain Driven Design and Massage Queue.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
