--- a/generic.html
+++ b/generic.html
@@ -46,17 +46,18 @@
 									<p>Hello! I'm Kantamanee Kantang (Mook).</p>
 								</header>
 								<div class="image main"><img style="width: 50%; height: 100%; margin-left: auto; margin-right: auto; " src="images/image3.png" alt="" /></div>
-								<p>I've always been insterested in data analysis world. I enjoy creating projects to visualize the impressive dashboards from raw dataset since starting my journey as a data analyst. Moreover, everyday is the day for improving my skills of further problems and having fun with it! </p><br />
+								<p>I've always been insterested in data analysis and application design world. I enjoy creating projects to visualize the impressive dashboards from dataset and evolve the skills of design pattarn for application using database since starting my journey. Moreover, everyday is the day for improving my skills of further problems and having fun with it! </p><br />
 								<h2>Technical skills</h2>
 								<h3 style="margin-bottom: 0.1rem; margin-top: 0.1rem;">Language</h3><p style="margin-bottom: 0.8rem;">Python, SQL</p>
 								<h3 style="margin-bottom: 0.1rem; margin-top: 0.1rem;">Software</h3><p>Jupyter Notebook, SQL Server, VS Code, Tableau, PowerBI, IBM DB2 and IBM Cognos on cloud, Excel</p><br />
 								<h2>Education</h2>
 								<h3 style="margin-bottom: 0.1rem; margin-top: 0.1rem;">IBM Data Analyst Professional Certificate</h3><i style="margin-bottom: 0.1rem;">Nov 2022 - Feb 2023</i>
+								<p style="margin-bottom: 0.3rem;">• Studied skills of Python, SQL and Database, SQL and NoSQL concepts</p>
 								<p style="margin-bottom: 0.3rem;">• Learned to perform data collection, data wrangling and preparation, exploratory data analysis, statistical analysis and data mining, data visualization with different charts and plots, and interactive dashboard creation</p>
 								<p style="margin-bottom: 0.8rem; margin-top: 0.1rem;">• Learned to create a presentation to report for various stakeholders in the organiazation</p>
 								<h3 style="margin-bottom: 0.1rem; margin-top: 0.1rem;">Bachelor Degree</h3><i style="margin-bottom: 0.3rem;">Aug 2014 - May 2018 at Srinakharinwirot University</i>
 								<p style="margin-bottom: 0.3rem;">• Electrical Engineering</p>
-								<p style="margin-bottom: 0.8rem; margin-top: 0.1rem;">• Overall 3.54/4.00</p><br />
+								<p style="margin-bottom: 0.8rem; margin-top: 0.1rem;">• Overall 3.25/4.00</p><br />
 								<h2>Experience</h2>
 								<h3 style="margin-bottom: 0.1rem; margin-top: 0.1rem;">Electrical Engineer</h3><i style="margin-bottom: 0.3rem;">Dec 2018 - Nov 2020 at TTCL Public Company Limited</i>
 								<p style="margin-bottom: 0.3rem;">• Desingned Electrical System for electrical equipment in LLDPE complex</p>
