--- a/generic.html
+++ b/generic.html
@@ -59,10 +59,14 @@
 								<p style="margin-bottom: 0.3rem;">• Electrical Engineering</p>
 								<p style="margin-bottom: 0.8rem; margin-top: 0.1rem;">• Overall 3.25/4.00</p><br />
 								<h2>Experience</h2>
+								<h3 style="margin-bottom: 0.1rem; margin-top: 0.1rem;">Data Analyst</h3><i style="margin-bottom: 0.3rem;">July 2023 - Present at Huawei Technologies (Thailand) Co., Ltd.</i>
+								<p style="margin-bottom: 0.3rem;">• Generated monthly reports for each customer by collecting, cleaning, uploading and ETL data to support project requirements</p>
+								<p style="margin-bottom: 0.8rem; margin-top: 0.1rem;">• Visualized interested insight and identified key finding into dashboard based on customer and product manager requirements</p>
+								<p style="margin-bottom: 0.8rem; margin-top: 0.1rem;">• Analyzed specific data to enhance system and engage customer to utilize new products</p>
 								<h3 style="margin-bottom: 0.1rem; margin-top: 0.1rem;">Electrical Engineer</h3><i style="margin-bottom: 0.3rem;">Dec 2018 - Nov 2020 at TTCL Public Company Limited</i>
 								<p style="margin-bottom: 0.3rem;">• Desingned Electrical System for electrical equipment in LLDPE complex</p>
 								<p style="margin-bottom: 0.8rem; margin-top: 0.1rem;">• Presented and clarified overall process to customer</p>
-
+								
 
 							</section>
 
